--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://kit.fontawesome.com/7ab68a398d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Week 2 In-class</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>Prem Patel - Portfolio </title>
 </head>
 
 <body>
     <div id="hero">
         <div id="overlay">
             <section>
-                <h1 id="first-line">Let's wonder where</h1>
-                <h1 id="second-line">the <span>WIFI</span> is weak.</h1>
-                <button id='trails-btn'>Happy Trails<i class="fa-duotone fa-signs-post"></i></button>
-            </section>
+                <h1 id="first-line">Prem Patel</h1>
+                <h1 id="second-line"> Design Portfolio</h1>
+                <button id='trails-btn'>Download Resume<i class="fa-duotone fa-signs-post"></i></button>
         </div>
     </div>
     <script src="js/scripts-min.js"></script>
