--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Week 2 In-class</title>
+    <title>Prem Patel - Portfolio</title>
 </head>
 
 <body>
@@ -18,8 +19,8 @@
             <section>
                 <h1 id="first-line">Hi, I am Prem Patel</h1>
                 <h1 id="second-line">& this is my Design Portfolio</h1>
-    
-    
+
+
                 <button id='trails-btn'>Download Resume<i class="fa-solid fa-download"
                         style="padding-left:2px"></i></i></button>
             </section>
