--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,12 +16,12 @@
     <div id="hero">
         <div id="overlay">
             <section>
-                <h1 id="first-line">Hi, I am Prem Patel</h1>
-                <h1 id="second-line">& this is my Design Portfolio</h1>
-
-
-                <button id='trails-btn'>Download Resume<i class="fa-solid fa-download"
-                        style="padding-left:2px"></i></i></button>
+                <h1 id="line-1">Hi, I am Prem Patel</h1>
+                <h1 id="line-2"> & this is my Design Portfolio</h1>
+    
+    
+                <button id='resumebutton'>Download Resume<i class="fa-solid fa-download"
+                        style="padding-left:10px"></i></i></button>
             </section>
             <div id="portrait" style=" height: 350px; width: 350px; margin-left: 400px;
             ">
