--- a/deploy/index.html
+++ b/deploy/index.html
@@ -23,7 +23,7 @@
                 <button id='resumebutton'>Download Resume<i class="fa-solid fa-download"
                         style="padding-left:10px"></i></i></button>
             </section>
-            <div id="portrait" style=" height: 350px; width: 350px; margin-left: 400px;
+            <div id="portrait" style=" height: 350px; width: 350px;
             ">
             </div>
         </div>
