--- a/deploy/index.html
+++ b/deploy/index.html
@@ -14,7 +14,7 @@
   
      
     <link rel="stylesheet" href="css/styles.css">
-    <title>Title Goes Here</title>
+    <title> Machine Learning</title>
 </head>
 
 <body>
