--- a/deploy/index.html
+++ b/deploy/index.html
@@ -46,7 +46,7 @@
                         <div>
                             <img id="imgrobot" src="img/history/hero.jpg" alt="robot hero spot">
                             <h1><span>Early History of</span> Machine Learning</h1>
-                            <h4> by Professor Karen Pine</h4>
+                            <h4 id="yellow"> by Professor Karen Pine</h4>
                         </div>
                         
                     </article>
