--- a/deploy/index.html
+++ b/deploy/index.html
@@ -110,7 +110,7 @@
                             </div>      
                         </section>
                     </div>
-                </section> su thyu ? idk 
+                </section>
     <section id="hero-2">
                         <img src="img/hero-2/hero.jpg" alt="robot hero">
                     </section>
