--- a/deploy/index.html
+++ b/deploy/index.html
@@ -13,7 +13,7 @@
      <script src="https://kit.fontawesome.com/66f1583f9f.js" crossorigin="anonymous"></script>
      
     <link rel="stylesheet" href="css/styles.css">
-    <title>Machine Learning</title>
+    <title>Mschine Learning</title>
 </head>
 
 <body>
