--- a/deploy/index.html
+++ b/deploy/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Draw SVG</title>
+    <title>DrawSVGing Things</title>
   </head>
 
   <body>
@@ -27,6 +27,7 @@
             height="211"
             viewBox="0 0 692 386"
             fill="none"
+            xmlns="http://www.w3.org/2000/svg"
             id="simple-svg"
           >
             <path
@@ -112,25 +113,164 @@
 
         <div class="svg">
           <svg
+            class="pattern"
             width="422"
             height="211"
-            viewBox="0 0 450 416"
+            viewBox="0 0 343 265"
             fill="none"
-            id="leaf-svg"
           >
-            <path
-              d="M289.89 123.42C201 65.9996 109 107.22 24 17.2196C4.20001 -3.78039 15.7 252.72 122.1 349.92C199.89 420.92 320 413 360.5 344C401 275 378.78 180.83 289.89 123.42V123.42Z"
+            <line
+              x1="3.5"
+              y1="3.5"
+              x2="3.49999"
+              y2="261.5"
               stroke="black"
-              stroke-width="32"
+              stroke-width="7"
               stroke-linecap="round"
-              stroke-linejoin="round"
             />
-            <path
-              d="M141 205C227 286 316 334 433 352"
+            <line
+              x1="24.5"
+              y1="3.5"
+              x2="24.5"
+              y2="261.5"
               stroke="black"
-              stroke-width="32"
+              stroke-width="7"
               stroke-linecap="round"
-              stroke-linejoin="round"
+            />
+            <line
+              x1="45.5"
+              y1="3.5"
+              x2="45.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="66.5"
+              y1="3.5"
+              x2="66.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="87.5"
+              y1="3.5"
+              x2="87.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="108.5"
+              y1="3.5"
+              x2="108.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="129.5"
+              y1="3.5"
+              x2="129.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="150.5"
+              y1="3.5"
+              x2="150.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="171.5"
+              y1="3.5"
+              x2="171.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="192.5"
+              y1="3.5"
+              x2="192.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="213.5"
+              y1="3.5"
+              x2="213.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="234.5"
+              y1="3.5"
+              x2="234.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="255.5"
+              y1="3.5"
+              x2="255.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="276.5"
+              y1="3.5"
+              x2="276.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="297.5"
+              y1="3.5"
+              x2="297.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="318.5"
+              y1="3.5"
+              x2="318.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
+            />
+            <line
+              x1="339.5"
+              y1="3.5"
+              x2="339.5"
+              y2="261.5"
+              stroke="black"
+              stroke-width="7"
+              stroke-linecap="round"
             />
           </svg>
         </div>
@@ -141,46 +281,45 @@
           <h1>UI DrawSVG</h1>
         </div>
 
-        <div class="svg">
-          <svg
-            width="422"
-            height="211"
-            viewBox="0 0 24 24"
-            fill="none"
-            id="ui-svg"
-          >
-            <path
-              d="M20 5C20 5 21.219 6.21895 22 7C21.219 7.78105 20 9 20 9"
-              stroke="currentColor"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="ui-arrow-1"
+        <div id="ui-svg" class="svg">
+          <svg class="ellipse" width="422" height="422" fill="none">
+            <circle
+              cx="126.5"
+              cy="126.5"
+              r="121.5"
+              stroke="url(#a)"
+              stroke-width="10"
             />
+            <defs>
+              <linearGradient
+                id="a"
+                x1="0"
+                x2="253"
+                y1="14.5"
+                y2="253"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#DB0FAE" />
+                <stop offset="1" stop-color="#863BE7" />
+              </linearGradient>
+            </defs>
+          </svg>
+          <svg class="blob" width="844" height="422" viewBox="0 0 480 480">
             <path
-              d="M22 6.99999C19 6.99999 13.5 6.99999 11.5 12.5C9.5 18 5 18 2 18"
-              stroke="currentColor"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="ui-arrow-1"
+              fill="#5498ff"
+              d="M294 342.5Q122 445 121 239t172-102.5q173 103.5 1 206Z"
             />
-
+          </svg>
+          <svg class="blob" width="844" height="422" viewBox="0 0 480 480">
             <path
-              d="M20 20C20 20 21.219 18.781 22 18C21.219 17.219 20 16 20 16"
-              stroke="currentColor"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="ui-arrow-2"
+              fill="rgba(190, 0, 0, 0.85)"
+              d="M294 342.5Q122 445 121 239t172-102.5q173 103.5 1 206Z"
             />
+          </svg>
+          <svg class="blob" width="844" height="422" viewBox="0 0 480 480">
             <path
-              d="M22 18C19 18 13.5 18 11.5 12.5C9.5 6.99999 5 7.00001 2 7"
-              stroke="currentColor"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              class="ui-arrow-2"
+              fill="rgba(126, 83, 255, 0.85)"
+              d="M294 342.5Q122 445 121 239t172-102.5q173 103.5 1 206Z"
             />
           </svg>
         </div>
