--- a/deploy/index.html
+++ b/deploy/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Starting Template</title>
+    <title>Logo Custom</title>
   </head>
 
   <body>
     <section class="preloader">
-      <div class="title">Spotify logo animation</div>
       <svg id="spotify_layer" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         viewBox="0 0 288 216">
         <defs>
