--- a/deploy/index.html
+++ b/deploy/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Starting Template</title>
+    <title> Found Logo</title>
   </head>
 
   <body>
     <section class="preloader">
-      <div class="title">Cake logo animation</div>
       <svg
         id="cake_layer"
         xmlns="http://www.w3.org/2000/svg"
